2002-07-17  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/run_doxygen:  Remove template parameter names from
	"Compound List" summary page.  Reformat.
	* docs/html/documentation.html:  XHTML fixes.

2002-07-16  Andreas Schwab  <schwab@suse.de>

	* libsupc++/new (set_new_handler): Declare to not throw any
	exceptions.
	* libsupc++/new_handler.cc (set_new_handler): Likewise.

2002-07-16  Gabriel Dos Reis  <gdr@nerim.net>

	* include/Makefile.am (bits_headers): Remove slice.h
	* include/Makefile.in: Regenerate.
	* include/bits/slice.h (slice): move to include/bits/slice_array.h
	* include/bits/slice.h Remove.
	* include/std/std_valarray.h: Don't #include bits/slice.h anymore.
	* include/bits/slice_array.h: Comply to official coding styles.
	* testsuite/26_numerics/slice.cc: New test.

2002-07-15  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/os/solaris/solaris2.5/ctype_base.h (ctype_base): Fix
	print to match vendor <ctype.h>.

2002-07-15  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/faq/index.html:  Fix download links.
	* docs/html/faq/index.txt:  Regenerate.
	* docs/html/17_intro/porting.html:  Regenerate from earlier changes.

2002-07-11  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.target (target_os switch): Allow for irix6*o32
	configurations.

2002-07-10  Gabriel Dos Reis  <gdr@nerim.net>

	* include/bits/valarray_meta.h (_UnFunBase): Take a second
	template parameter. Remove _M_func data member.
	(_UnFunClos): Take a third template parameter.
	(__abs, __cos, __acos, __cosh, __sin, __asin, __sinh, __tan,
	__atan, __tanh, __exp, __log, __log10, __sqrt): New classes.
	(_DEFINE_EXPR_UNARY_OPERATOR): Adjust definition.

2002-07-08  Eric Christopher  <echristo@redhat.com>

	* configure.target: Fix comment for mips atomicity. Add
	mips*-*-linux* target, enable atomic operations there.
	* config/cpu/mips/atomicity.h: Fix comments, remove
	#ifndef/#endif. Add push/pop mips2.

2002-07-08  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>
